# investigator

backend/: .gitignore  main.py  pyproject.toml
backend/routers/: transcribe.py
backend/services/: transcription.py  youtube.py
frontend/src/: App.css  App.jsx  index.css
